# Lab2QRCode

./: .clang-format  CMakeLists.txt  README.md  check-format.sh  version_info.ps1  version_info.sh
.github/workflows/: build.yaml
docs/: find_boost.md  mqtt.md  软件设计文档.md
scripts/cmake/: check-format-prebuild.cmake  check-format.cmake  format-all.cmake  version-info.cmake
src/: BarcodeWidget.cpp  BarcodeWidget.h  CameraConfig.cpp  CameraConfig.h  CameraWidget.cpp  CameraWidget.h  FrameWidget.cpp  about_dialog.cpp  about_dialog.h  commondef.h  convert.h  logging.h  main.cpp  sysinfo.h
src/components/: UiConfig.cpp  UiConfig.h  message_dialog.cpp  message_dialog.h
src/mqtt/: MQTTMessageWidget.cpp  MQTTMessageWidget.h  mqtt_client.cpp  mqtt_client.h
src/version_info/: version.h
test_samples/: readme.md
